force-app/main/default/objects/Agent_Payout__c/fields/Statement_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Statement_File_Id__c</fullName>
    <description>Identifies the dedicated statement File. Prior versions are preserved.</description>
    <label>Statement File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>