force-app/main/default/objects/Agent_Payout__c/fields/Statement_Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Statement_Generated_At__c</fullName>
    <description>Creation time of the latest generated statement version.</description>
    <label>Statement Generated At</label>
    <type>DateTime</type>
</CustomField>