force-app/main/default/objects/Agent_Payout__c/fields/Statement_Source_Hash__c.field-meta.xml
<CustomField>
    <fullName>Statement_Source_Hash__c</fullName>
    <description>Fingerprint of the source used for the latest generated statement.</description>
    <label>Statement Source Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>